Add Backup and Restore commands for AI memory management and enhance macOS automation notifications